Add Render configuration for full-stack deployment

--- a/breeza-ai/.env.production
+++ b/breeza-ai/.env.production
@@ -1,3 +1,4 @@
-# Production Environment Variables
-# This will be updated with the actual Vercel URL after deployment
-REACT_APP_API_URL=https://your-vercel-app.vercel.app
+# Production Environment Variables for Render
+REACT_APP_API_URL=https://breeza-ai-backend.onrender.com
+CI=false
+GENERATE_SOURCEMAP=false
