--- a/breeza-ai/.env.production
+++ b/breeza-ai/.env.production
@@ -1,4 +1,1 @@
-# Production Environment Variables for Render
-REACT_APP_API_URL=https://breeza-ai-backend.onrender.com
-CI=false
-GENERATE_SOURCEMAP=false
+REACT_APP_API_URL=https://your-vercel-app.vercel.app
