--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch \"./**/*.ts\" --exec ts-node index.ts",
-    "build": "npm install && tsc",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "keywords": [],
